# item_identifier

./: Cargo.toml
src/: item_identifier.rs  main.rs
struct_name_derive/: Cargo.toml
struct_name_derive/src/: lib.rs
