[package]
name = "item_identifier_derive"
version = "0.1.0"
authors = ["Alistair Roche <alistair@seermedical.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[[bin]]
name = "huh"
path = "src/main.rs"

[dependencies]
struct_name_derive = { path = "struct_name_derive" }

